# Amethyst-Launcher

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  amethyst.spec  build.md  build_deb.sh  installer.iss  main.py  main.qml  plan.md  pyproject.toml  qt.conf  qtquickcontrols2.conf
.github/workflows/: build.yml
config/: manager.py  paths.json
geode/: loadprofile.py  manager.py
launch/: downloader.py  manager.py
startup/: ownership.py
ui/components/: InstanceGrid.qml  InstanceSidebar.qml
ui/dialogs/: DeleteConfirmDialog.qml  DownloadDialog.qml  InstanceOptionsDialog.qml  SettingsDialog.qml  SetupWizard.qml
