[project]
name = "amethyst-launcher"

[tool.pyside6-project]
files = [
    "main.py",
    "main.qml",
    "launch/__init__.py",
    "launch/downloader.py",
    "launch/manager.py",
    "geode/__init__.py",
    "geode/loadprofile.py",
    "geode/manager.py",
    "config/manager.py",
    "startup/__init__.py",
    "startup/ownership.py",
    "config/paths.json"
]